// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing service page rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/onthego"
          onClick={[Function]}
        >
          311 on the go
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-2oo2i6": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-1ldikjo": "",
            }
          }
        >
          <div
            className="br br-t400 br--y css-15y708"
            style={Object {}}
          >
            <div>
              <div
                className="sh sh--y"
              >
                <h2
                  className="sh-title"
                >
                  Cosmic Incursion
                </h2>
              </div>
              <div
                className="m-v500"
              >
                <div
                  className="g g--top"
                >
                  <div
                    className="g--7"
                  >
                    <textarea
                      className={
                        Object {
                          "data-css-1gh870p": "",
                        }
                      }
                      defaultValue=""
                      name="description"
                      onBlur={[Function]}
                      onInput={[Function]}
                      placeholder="How can we help?"
                    />
                    <div>
                      <label
                        className="txt"
                      >
                        <span
                          className="txt-l"
                        >
                          Please provide any other relevant information:
                           
                        </span>
                        <textarea
                          className="txt-f"
                          name="ST-CMTS"
                          onChange={[Function]}
                          rows="5"
                          value=""
                        />
                      </label>
                    </div>
                    <hr
                      className="hr hr--dash m-v500"
                    />
                    <div>
                      <label
                        className="txt"
                      >
                        <span
                          className="txt-l"
                        >
                          **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                           
                        </span>
                        <input
                          className="txt-f"
                          name="INFO-CSIRMV1"
                          onChange={[Function]}
                          type="text"
                          value=""
                        />
                      </label>
                    </div>
                    <hr
                      className="hr hr--dash m-v500"
                    />
                    <div>
                      <div>
                        <div
                          className="m-v300"
                        >
                          <span
                            className="txt-l"
                          >
                            How many dimensions have been breached?
                             
                            (required)
                          </span>
                        </div>
                        <div
                          className="g"
                        >
                          <div
                            className="g--12"
                          >
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="One"
                              />
                              <span
                                className="ra-l"
                              >
                                One
                              </span>
                            </label>
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="Two"
                              />
                              <span
                                className="ra-l"
                              >
                                Two
                              </span>
                            </label>
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="Three"
                              />
                              <span
                                className="ra-l"
                              >
                                Three
                              </span>
                            </label>
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="More than Three"
                              />
                              <span
                                className="ra-l"
                              >
                                More than Three
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="g--5"
                  >
                    <div
                      className="css-14detlc"
                      onClick={[Function]}
                      onDragEnter={[Function]}
                      onDragLeave={[Function]}
                      onDragOver={[Function]}
                      onDragStart={[Function]}
                      onDrop={[Function]}
                      style={Object {}}
                    >
                      <img
                        alt=""
                        height="324"
                        src="/static/img/311-watermark.svg"
                        style={
                          Object {
                            "display": "block",
                            "height": "auto",
                            "width": "100%",
                          }
                        }
                        width="479"
                      />
                      <input
                        accept="image/*"
                        multiple={false}
                        onChange={[Function]}
                        style={
                          Object {
                            "display": "none",
                          }
                        }
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="g"
              >
                <div
                  className="g--9"
                />
                <button
                  className="btn g--33"
                  disabled={true}
                  onClick={[Function]}
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      className="p-a300 t--sans tt-u br css-1pep5i5"
      href="javascript:void(0)"
      onClick={[Function]}
      style={
        Object {
          "right": "20%",
        }
      }
    >
      Live Chat Online
    </a>
  </div>
</div>
`;

exports[`existing service page rendering phone 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/onthego"
          onClick={[Function]}
        >
          311 on the go
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-2oo2i6": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-1ldikjo": "",
            }
          }
        >
          <div
            className="br br-t400 br--y css-15y708"
            style={Object {}}
          >
            <div>
              <div
                className="sh sh--y"
              >
                <h2
                  className="sh-title"
                >
                  Cosmic Incursion
                </h2>
              </div>
              <div
                className="m-v500"
              >
                <div
                  className="g g--top"
                >
                  <div
                    className="g--7"
                  >
                    <textarea
                      className={
                        Object {
                          "data-css-1gh870p": "",
                        }
                      }
                      defaultValue=""
                      name="description"
                      onBlur={[Function]}
                      onInput={[Function]}
                      placeholder="How can we help?"
                    />
                    <div>
                      <label
                        className="txt"
                      >
                        <span
                          className="txt-l"
                        >
                          Please provide any other relevant information:
                           
                        </span>
                        <textarea
                          className="txt-f"
                          name="ST-CMTS"
                          onChange={[Function]}
                          rows="5"
                          value=""
                        />
                      </label>
                    </div>
                    <hr
                      className="hr hr--dash m-v500"
                    />
                    <div>
                      <label
                        className="txt"
                      >
                        <span
                          className="txt-l"
                        >
                          **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                           
                        </span>
                        <input
                          className="txt-f"
                          name="INFO-CSIRMV1"
                          onChange={[Function]}
                          type="text"
                          value=""
                        />
                      </label>
                    </div>
                    <hr
                      className="hr hr--dash m-v500"
                    />
                    <div>
                      <div>
                        <div
                          className="m-v300"
                        >
                          <span
                            className="txt-l"
                          >
                            How many dimensions have been breached?
                             
                            (required)
                          </span>
                        </div>
                        <div
                          className="g"
                        >
                          <div
                            className="g--12"
                          >
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="One"
                              />
                              <span
                                className="ra-l"
                              >
                                One
                              </span>
                            </label>
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="Two"
                              />
                              <span
                                className="ra-l"
                              >
                                Two
                              </span>
                            </label>
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="Three"
                              />
                              <span
                                className="ra-l"
                              >
                                Three
                              </span>
                            </label>
                            <label
                              className="ra"
                            >
                              <input
                                checked={false}
                                className="ra-f"
                                name="SR-CSIRMV1"
                                onChange={[Function]}
                                type="radio"
                                value="More than Three"
                              />
                              <span
                                className="ra-l"
                              >
                                More than Three
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="g--5"
                  >
                    <div
                      className="css-14detlc"
                      onClick={[Function]}
                      onDragEnter={[Function]}
                      onDragLeave={[Function]}
                      onDragOver={[Function]}
                      onDragStart={[Function]}
                      onDrop={[Function]}
                      style={Object {}}
                    >
                      <img
                        alt=""
                        height="324"
                        src="/static/img/311-watermark.svg"
                        style={
                          Object {
                            "display": "block",
                            "height": "auto",
                            "width": "100%",
                          }
                        }
                        width="479"
                      />
                      <input
                        accept="image/*"
                        multiple={false}
                        onChange={[Function]}
                        style={
                          Object {
                            "display": "none",
                          }
                        }
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="g"
              >
                <div
                  className="g--9"
                />
                <button
                  className="btn g--33"
                  disabled={true}
                  onClick={[Function]}
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      className="p-a300 t--sans tt-u br css-1pep5i5"
      href="javascript:void(0)"
      onClick={[Function]}
      style={
        Object {
          "right": "20%",
        }
      }
    >
      Live Chat Online
    </a>
  </div>
</div>
`;

exports[`existing service page rendering phone location step 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/onthego"
          onClick={[Function]}
        >
          311 on the go
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-2oo2i6": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-k2ghp": "",
            }
          }
        >
          <div
            className="br br-t400 br--y css-15y708"
            style={
              Object {
                "padding": 20,
              }
            }
          >
            <div
              className={
                Object {
                  "data-css-n3n77q": "",
                }
              }
            >
              <h3
                className="t--info"
              >
                Where is the problem happening?
              </h3>
              <hr
                className="hr hr--dash"
              />
              
              <form
                className="sf sf--sm sf--y m-v300"
                onSubmit={[Function]}
              >
                <div
                  className="sf-i"
                >
                  <input
                    className="sf-i-f"
                    onInput={[Function]}
                    placeholder="Search for an address…"
                    type="text"
                    value=""
                  />
                  <button
                    className="sf-i-b"
                    disabled={true}
                    type="submit"
                  >
                    Search
                  </button>
                </div>
              </form>
              <div
                className="g css-1k8tu3j"
              >
                <div
                  className="g--6"
                />
                <button
                  className="btn g--6"
                  disabled={true}
                  onClick={[Function]}
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      className="p-a300 t--sans tt-u br css-1pep5i5"
      href="javascript:void(0)"
      onClick={[Function]}
      style={
        Object {
          "right": "20%",
        }
      }
    >
      Live Chat Online
    </a>
  </div>
</div>
`;

exports[`missing service page rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/onthego"
          onClick={[Function]}
        >
          311 on the go
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-2oo2i6": "",
          }
        }
      >
        <div
          className={
            Object {
              "data-css-1ldikjo": "",
            }
          }
        >
          <div
            className="br br-t400 br--y css-15y708"
            style={Object {}}
          >
            <div
              className="sh sh--y"
            >
              <h2
                className="sh-title"
              >
                Service not found
              </h2>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      className="p-a300 t--sans tt-u br css-1pep5i5"
      href="javascript:void(0)"
      onClick={[Function]}
      style={
        Object {
          "right": "20%",
        }
      }
    >
      Live Chat Online
    </a>
  </div>
</div>
`;

exports[`report form rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a nv-s-l-a--active"
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/lookup"
          onClick={[Function]}
        >
          Case look up
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/onthego"
          onClick={[Function]}
        >
          311 on the go
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-zcm9c2": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-2oo2i6": "",
          }
        }
      >
        <div
          className="br br-t400 br--y css-15y708"
          style={Object {}}
        >
          <div
            className="sh sh--y"
          >
            <h2
              className="sh-title"
            >
              311: Boston City Services
            </h2>
          </div>
          <div
            className="m-v500"
          >
            <div
              className="g"
            >
              <div
                className="g--8"
              >
                <h3
                  className="stp m-v300"
                >
                  <span
                    className="stp-number"
                  >
                    1
                  </span>
                  What can we do for you?
                </h3>
                <textarea
                  className={
                    Object {
                      "data-css-1red1ju": "",
                    }
                  }
                  defaultValue=""
                  name="description"
                  onBlur={[Function]}
                  onInput={[Function]}
                  placeholder="How can we help?"
                />
              </div>
              <div
                className="g--44"
              >
                <h3
                  className="stp m-v300"
                >
                  Top Service Requests
                </h3>
                <div
                  style={
                    Object {
                      "height": 222,
                      "overflowY": "scroll",
                    }
                  }
                >
                  <ul
                    className="ul"
                  >
                    <li>
                      <a
                        className="t--sans tt-u"
                        href="/report/CSMCINC"
                        onClick={[Function]}
                      >
                        Cosmic Incursion
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      className="p-a300 t--sans tt-u br css-1pep5i5"
      href="#recent"
      style={
        Object {
          "left": 80,
        }
      }
    >
      Recent Cases
    </a>
    <a
      className="p-a300 t--sans tt-u br css-1pep5i5"
      href="javascript:void(0)"
      onClick={[Function]}
      style={
        Object {
          "right": "20%",
        }
      }
    >
      Live Chat Online
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1yc7ffu": "",
      }
    }
  >
    <a
      name="recent"
    />
    <div
      className="css-1t62idy"
      style={Object {}}
    >
      <div
        className={false}
        style={Object {}}
      >
        <div
          className="p-a300"
        >
          <form
            acceptCharset="UTF-8"
            action="/lookup"
            className="sf sf--y sf--md"
            method="get"
            onSubmit={[Function]}
          >
            <div
              className="sf-i"
            >
              <input
                className="sf-i-f"
                name="q"
                onInput={[Function]}
                placeholder="Search recent cases…"
                type="text"
                value=""
              />
              <button
                className="sf-i-b"
              >
                Search
              </button>
            </div>
          </form>
        </div>
        <hr
          className="hr hr--dash"
        />
      </div>
    </div>
  </div>
</div>
`;
